# Hazel_Engine

./: CMakeLists.txt  Pasos  README.md  main.cpp  remove_later.cpp
Core/ComponentSystem/: Component.cpp  Component.h  Entity.cpp  Entity.h
Core/ComponentSystem/Animations/: AnimationLoader.cpp  AnimationLoader.h  AnimationTransition.h  Animator.cpp  Animator.h
Core/ComponentSystem/Animations/CsaFiles/: player_animation.csa
Core/ComponentSystem/Animations/JsonFiles/: player_animation.json
Core/ComponentSystem/Components/: BoxCollider.cpp  BoxCollider.h  Font.h  Renderer.cpp  Renderer.h  SpriteRenderer.cpp  SpriteRenderer.h  Texture.h  Transform.cpp  Transform.h
Core/ComponentSystem/Viewport/: Camera2D.h
Core/GUI/Widgets/: Button.cpp  Button.h  Widget.cpp  Widget.h
Core/GUI/Widgets/Handlers/: WidgetManager.cpp  WidgetManager.h
Core/GUI/lib/: TextRenderer.cpp  TextRenderer.h
Core/Global/: Application.cpp  Application.h  Global.cpp  Global.h
Core/Managers/: EntityManager.h  FontManager.cpp  FontManager.h  ResourceManager.h  WindowManager.cpp  WindowManager.h
Core/Scene/: Node.cpp  Node.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h
Core/Shaders/: bounding_box_fragment_shader.glsl  bounding_box_vertex_shader.glsl  fragment_shader.glsl  vertex_shader.glsl
Core/Shaders/Classes/: Shader.cpp  Shader.h
